diff: fix output being ignored if there is an error/warning

BUG: 507872


(cherry picked from commit dab369b40482f41280c0a5f28fd718a36fe75ce7)

Co-authored-by: Waqar Ahmed <waqar.17a@gmail.com>